Added explicit torch install (would think fastai image had this, though)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,2 +1,2 @@
 from fastai/fastai
-RUN python -m pip install fastgradio
+RUN python -m pip install torch torchvision && python -m pip install fastgradio
